# ChatGPT-GUI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: CODE_OF_CONDUCT.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: pypi.yaml  test-pypi.yaml
requirements/: requirements_dev_pre_commit.txt  requirements_hard.txt  requirements_soft.txt
src/chatgpt_gui/: __init__.py  __main__.py  _version.py  constants.py  events.py  exception_hook.py  lang.py  models.py  run.py  tomlfile.py
src/chatgpt_gui/_vendor/: __init__.py
src/chatgpt_gui/_vendor/packaging/: __init__.py  _structures.py  version.py
src/chatgpt_gui/gui/: __init__.py  aliases.py  app.py  workers.py
src/chatgpt_gui/gui/menus/: __init__.py  account.py  conversations.py  help.py  tools.py
src/chatgpt_gui/gui/widgets/: __init__.py  combo_box.py  conversation_tabs.py  conversation_view.py  exception_logger.py  external_text_browser.py  paste_line_edit.py
src/chatgpt_gui/gui/windows/: __init__.py  application.py  captcha_dialog.py  changelog_viewer.py  exception_reporter.py  license_viewer.py  readme_viewer.py  settings.py  sign_in_dialog.py
src/chatgpt_gui/network/: __init__.py  client.py  manager.py  version_check.py
src/chatgpt_gui/network/client/: __init__.py  auth.py  chatgpt.py  structures.py
src/chatgpt_gui/resources/: default_settings.toml  external_icons.json
src/chatgpt_gui/resources/lang/: en.default.json
src/chatgpt_gui/resources/scripts/: CreateShortcut.ps1  upgrade_version.py
src/chatgpt_gui/resources/themes/dark/: stylesheet.qss
src/chatgpt_gui/resources/themes/light/: stylesheet.qss
src/chatgpt_gui/utils/: __init__.py  common.py  gui.py  network.py  package.py  system.py
